--- a/index.html
+++ b/index.html
@@ -4,72 +4,125 @@
     <meta charset="UTF-8">
     <title>BTE311-Tuana Bozdağ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style>
+
+      body {
+        font-family: Arial, sans-serif; 
+        background-color:#f2ffe6; 
+        color:#003300;
+        margin:0;
+        padding:0;
+      }
+
+      header {
+        background-color:#356600; 
+        color:#ffffe6; 
+        text-align:center; 
+        padding:15px 0; 
+        border-radius:0 0 5px 5px;
+        box-shadow:0 2px 6px rgba(0,0,0,0.25);
+      }
+
+      h1 {
+        margin:0; 
+        font-size:35px;
+      }
+
+      h2 {
+        text-align:center;
+        margin-top:25px; 
+        color:#1a3300;
+        font-size:30px;
+      }
+
+      .icerik-kutu {
+        width:90%;
+        max-width:650px;
+        margin:20px auto;
+        background:white; 
+        padding:20px 30px;
+        border:2px solid #356600;
+        border-radius:8px;
+        box-shadow:0px 4px 10px rgba(0,0,0,0.15);
+      }
+
+      h4 {
+        margin-top:20px; 
+        margin-bottom:8px; 
+        color:#004d00;
+        font-size:20px;
+      }
+
+      ul {
+        padding-left:0; 
+        margin-top:0;
+        list-style:none;
+      }
+
+      li {
+        background-color:#d9ebc5; 
+        padding:10px; 
+        border-radius:4px;
+        margin-bottom:7px;
+      }
+
+      li:hover {
+        background-color:#cbe3b4;
+      }
+
+      a {
+        color:#003300;
+        font-weight:bold;
+        text-decoration:none;
+      }
+
+    </style>
+
   </head>
-  <body style="font-family:Arial, sans-serif; background-color:#f2ffe6; color:#003300;">
-    
-    <header style="background-color:#356600; color:#ffffe6; text-align:center; padding:10px 0; border-radius:2px;">
+
+  <body>
+    <header>
       <h1>Tuana Bozdağ - 2230780044</h1>
     </header>
 
-    <h2 style="text-align:left; margin-top:20px; color:#1a3300;">Haftalar</h2>
+    <h2>Haftalar</h2>
 
-    <div style="width:80%; max-width:600px; background:white; padding:5px 30px; border:2px solid #356600 2px; border-radius:5px;">
+    <div class="icerik-kutu">
       
-      <h4 style="margin-bottom:5px; color:#004d00;">Hafta 4</h4>
-      <ul style="padding-left:0; margin-top:0;">
-        <li style="background-color:#d9ebc5; padding:10px; border-radius:2px;">
-            <a href="sayfalar/form.html" style="color:#003300;font-weight:bold;">Form Ödevi</a>
-        </li>
-        <li style="background-color:#d9ebc5; padding:7px; border-radius:2px;">
-            <a href="sayfalar/test.html" style="color:#003300;font-weight:bold;">Test Ödevi</a>
-        </li>
+      <h4>Hafta 4</h4>
+      <ul>
+        <li><a href="sayfalar/form.html">Form Ödevi</a></li>
+        <li><a href="sayfalar/test.html">Test Ödevi</a></li>
       </ul>
 
-      <h4 style="margin-bottom:5px; color:#004d00;">Hafta 5</h4>
-      <ul style="padding-left:0; margin-top:0;">
-        <li style="background-color:#d9ebc5; padding:10px; border-radius:2px;">
-            <a href="sayfalar/tablo1.html" style="color:#003300;font-weight:bold;">Tablo1 Ödev</a>
-        </li>
-        <li style="background-color:#d9ebc5; padding:7px; border-radius:2px;">
-            <a href="sayfalar/tablo2.html" style="color:#003300;font-weight:bold;">Tablo2 Ödevi</a>
-        </li>
-        <li style="background-color:#d9ebc5; padding:7px; border-radius:2px;">
-            <a href="sayfalar/tablo3/tablo3.html" style="color:#003300;font-weight:bold;">Tablo3 Ödevi</a>
-        </li>
-        <li style="background-color:#d9ebc5; padding:7px; border-radius:2px;">
-            <a href="sayfalar/venn_sema.html" style="color:#003300;font-weight:bold;">Venn Şeması Ödevi</a>
-        </li>
+      <h4>Hafta 5</h4>
+      <ul>
+        <li><a href="sayfalar/tablo1.html">Tablo1 Ödev / Inline CSS</a></li>
+        <li><a href="sayfalar/tablo2.html">Tablo2 Ödevi / Internal CSS</a></li>
+        <li><a href="sayfalar/tablo3/tablo3.html">Tablo3 Ödevi / External CSS</a></li>
+        <li><a href="sayfalar/venn_sema.html">Venn Şeması Ödevi</a></li>
       </ul>
 
-      <h4 style="margin-bottom:5px; color:#004d00;">Hafta 7</h4>
-      <ul style="padding-left:0; margin-top:0;">
-        <li style="background-color:#d9ebc5; padding:10px; border-radius:2px;">
-            <a href="sayfalar/animasyon.html" style="color:#003300;font-weight:bold;">Daireler Animasyon Ödevi</a>
-        </li>
+      <h4>Hafta 7</h4>
+      <ul>
+        <li><a href="sayfalar/animasyon.html">Daireler Animasyon Ödevi</a></li>
       </ul>
 
-      <h4 style="margin-bottom:5px; color:#004d00;">Hafta 8</h4>
-      <ul style="padding-left:0; margin-top:0;">
-        <li style="background-color:#d9ebc5; padding:10px; border-radius:2px;">
-            <a href="sayfalar/kartlar.html" style="color:#003300;font-weight:bold;">Bootstrap Kartlar Ödevi</a>
-        </li>
+      <h4>Hafta 8</h4>
+      <ul>
+        <li><a href="sayfalar/kartlar.html">Bootstrap Kartlar Ödevi</a></li>
       </ul>
 
-      <h4 style="margin-bottom:5px; color:#004d00;">Hafta 9</h4>
-      <ul style="padding-left:0; margin-top:0;">
-        <li style="background-color:#d9ebc5; padding:10px; border-radius:2px;">
-            <a href="sayfalar/js_gorseller.html" style="color:#003300;font-weight:bold;">JavaScript Görsel Ödevi</a>
-        </li>
+      <h4>Hafta 9</h4>
+      <ul>
+        <li><a href="sayfalar/js_gorseller.html">JavaScript Görsel Ödevi</a></li>
       </ul>
 
-      <h4 style="margin-bottom:5px; color:#004d00;">Hafta 10</h4>
-      <ul style="padding-left:0; margin-top:0;">
-        <li style="background-color:#d9ebc5; padding:10px; border-radius:2px;">
-            <a href="sayfalar/oyunlar/orijinal/CardFlip_Game-main/index.html" style="color:#003300;font-weight:bold;">JavaScript Oyun / Orijinal</a>
-        </li>
-              <li style="background-color:#d9ebc5; padding:10px; border-radius:2px;">
-            <a href="sayfalar/oyunlar/myver/HafizaOyunu_redesigned/index.html" style="color:#003300;font-weight:bold;">JavaScript Oyun / Benim Ver.</a>
-        </li>
+      <h4>Hafta 10</h4>
+      <ul>
+        <li><a href="sayfalar/oyunlar/orijinal/CardFlip_Game-main/index.html">JavaScript Oyun / Orijinal</a></li>
+        <li><a href="sayfalar/oyunlar/myver/HafizaOyunu_redesigned/index.html">JavaScript Oyun / Benim Ver.</a></li>
       </ul>
 
     </div>
