--- a/sayfalar/tablo3/tablo3.html
+++ b/sayfalar/tablo3/tablo3.html
@@ -5,7 +5,27 @@
 <title>Tablo3 Ödev</title>
 <link rel="stylesheet" href="style.css">
 </head>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f2ffe6;}
 
+  .title {
+    text-align: center;
+    color: #408000;}
+
+  .dersprog {
+    margin: auto;
+    border-collapse: collapse;
+    text-align: center;}
+
+  .dersprog th, .dersprog td {
+    border: 1px solid #575e54;
+    padding: 10px;}
+
+  .dersprog th {
+    background-color: #bae5b9;}
+</style>
 <body>
   <h2 class="title">Haftalık Ders Programı - External CSS</h2>
 
