--- a/sayfalar/tablo2.html
+++ b/sayfalar/tablo2.html
@@ -7,10 +7,11 @@
 <style>
   body {
     font-family: Arial, sans-serif;
-    background-color: #fafafa;}
+    background-color: #f2ffe6;}
 
   h2 {
-    text-align: center;}
+    text-align: center;
+    color: #408000;}
 
   table {
     margin: auto;
@@ -18,11 +19,11 @@
     text-align: center;}
 
   th, td {
-    border: 1px solid #999;
+    border: 1px solid #575e54;
     padding: 10px;}
 
   th {
-    background-color: #f2f2f2;}
+    background-color: #bae5b9;}
 
 </style>
 </head>
