--- a/sayfalar/tablo1.html
+++ b/sayfalar/tablo1.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 <title>Tablo1 Ödev</title>
 </head>
-<body style="font-family:Arial, sans-serif; background-color:#fafafa;">
+<body style="font-family:Arial, sans-serif; background-color:#f2ffe6;">
 
-<h2 style="text-align:center;">Haftalık Ders Programı - Inline CSS</h2>
+<h2 style="text-align:center; color: #408000;">Haftalık Ders Programı - Inline CSS</h2>
 
 <table border="1" cellspacing="0" cellpadding="10" style="margin:auto; border-collapse:collapse; text-align:center;">
-  <tr style="background-color:#f2f2f2;">
+  <tr style="background-color:#bae5b9;">
     <th>Saat</th>
     <th>13.00</th>
     <th>13.40</th>
@@ -20,7 +20,7 @@
     <th>17.00</th>
   </tr>
   <tr>
-    <th style="background-color:#f2f2f2;">Pazartesi</th>
+    <th style="background-color:#bae5b9;">Pazartesi</th>
     <td>İngilizce</td>
     <td>İngilizce</td>
     <td>Kültür ve Medeniyetler</td>
@@ -30,7 +30,7 @@
     <td>Türkçe</td>
   </tr>
   <tr>
-    <th style="background-color:#f2f2f2;">Salı</th>
+    <th style="background-color:#bae5b9;">Salı</th>
     <td>Matematik</td>
     <td>Matematik</td>
     <td>Fen Bilimleri</td>
@@ -40,7 +40,7 @@
     <td>Türkçe</td>
   </tr>
   <tr>
-    <th style="background-color:#f2f2f2;">Çarşamba</th>
+    <th style="background-color:#bae5b9;">Çarşamba</th>
     <td>Spor ve Fiziki Etkinlikler</td>
     <td>Spor ve Fiziki Etkinlikler</td>
     <td>Türkçe</td>
@@ -50,7 +50,7 @@
     <td>Teknoloji ve Tasarım</td>
   </tr>
   <tr>
-    <th style="background-color:#f2f2f2;">Perşembe</th>
+    <th style="background-color:#bae5b9;">Perşembe</th>
     <td>İngilizce</b></td>
     <td>İngilizce</td>
     <td>Fen Bilimleri</td>
@@ -60,7 +60,7 @@
     <td>Kültür ve Medeniyetler</td>
   </tr>
   <tr>
-    <th style="background-color:#f2f2f2;">Cuma</th>
+    <th style="background-color:#bae5b9;">Cuma</th>
     <td>Görsel Sanatlar</td>
     <td>Din Kültürü ve Ahlak Bilgisi</td>
     <td>Din Kültürü ve Ahlak Bilgisi</td>
