--- a/sayfalar/kartlar.html
+++ b/sayfalar/kartlar.html
@@ -1,110 +1,184 @@
-<html>
+<!DOCTYPE html>
+<html lang="tr">
 <head>
 <meta charset="utf-8">
 <title>Bootstrap Kartlar Ödevi</title>
-<meta name= "viewport" content= "width=device-width, initial-scale=1">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-</head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+
 <style>
- h1 {
+  body {
+    background-color: #f2ffe6;
+  }
+
+  h1 {
     text-align: center;
     margin: 70px 0;
+    color: #408000;
   }
 
   .card-body {
-  display: flex;
-  flex-direction: column;
-  height: 100%;           
+    display: flex;
+    flex-direction: column;
+    height: 100%;
   }
 
   .card-body .btn {
-  margin-top: auto; 
+    margin-top: auto;
   }
 
-  body{
-    background-color: rgb(238, 238, 238);
+  .card-title {
+    text-align: center;
+    font-size: 18px;
   }
 </style>
+
+</head>
 <body>
-  <header>
-    <h1 style="color: green;">Gumball'ın Muhteşem Dünyası Karakter Rehberi</h1>
-  </header>
 
-<div class="container">
+<header>
+  <h1>Gumball'ın Muhteşem Dünyası Karakter Rehberi</h1>
+</header>
+
+<div class="container my-4">
   <div class="row g-3">
-    <div class="card col-12 col-sm-6 col-md-4 col-lg-2"> 
-    <img class="card-img-top" src="../img/gumball.png" alt="Card image cap">
-    <div class="card-body"> 
-    <h4 class="card-title"><a>Gumball Watterson </a></h4> <p class="card-text">Gumball Watterson, ele avuca sığmayan ve yaşadığı kasabada yaramazlık yapmaya meyilli on iki yaşında mavi bir kedidir.</p> 
-    <a href="https://theamazingworldofgumball.fandom.com/wiki/Gumball_Watterson" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
 
-    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
-    <img class="card-img-top" src="../img/darwin.png" alt="Card image cap">
-    <div class="card-body"> 
-    <h4 class="card-title"><a>Darwin Watterson </a></h4> <p class="card-text">Darwin Watterson, Gumball'un üvey balık kardeşi ve en iyi arkadaşıdır.</p> 
-    <a href="https://theamazingworldofgumball.fandom.com/wiki/Darwin_Watterson" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+    <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+      <div class="card h-100">
+        <img class="card-img-top" src="../img/gumball.png" alt="Gumball">
+        <div class="card-body">
+          <h4 class="card-title">Gumball Watterson</h4>
+          <p class="card-text">Gumball Watterson, ele avuca sığmayan ve yaramazlık yapmaya meyilli 12 yaşında mavi bir kedidir.</p>
+          <a href="https://theamazingworldofgumball.fandom.com/wiki/Gumball_Watterson" class="btn btn-success">Daha fazla bilgi için</a>
+        </div>
+      </div>
+    </div>
 
-    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
-    <img class="card-img-top" src="../img/anais.png" alt="Card image cap">
-    <div class="card-body"> 
-    <h4 class="card-title"><a>Anais Watterson </a></h4> <p class="card-text">Anais Watterson, Gumball'un dört yaşındaki pembe tavşan kız kardeşi ve ailenin en zeki üyesidir.</p> 
-    <a href="https://theamazingworldofgumball.fandom.com/wiki/Anais_Watterson" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+    <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+      <div class="card h-100">
+        <img class="card-img-top" src="../img/darwin.png" alt="Darwin">
+        <div class="card-body">
+          <h4 class="card-title">Darwin Watterson</h4>
+          <p class="card-text">Darwin Watterson, Gumball'un üvey balık kardeşi ve en iyi arkadaşıdır.</p>
+          <a href="https://theamazingworldofgumball.fandom.com/wiki/Darwin_Watterson" class="btn btn-success">Daha fazla bilgi için</a>
+        </div>
+      </div>
+    </div>
 
-    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
-    <img class="card-img-top" src="../img/nicole.png" alt="Card image cap">
-    <div class="card-body"> 
-    <h4 class="card-title"><a>Nicole Watterson </a></h4> <p class="card-text">Nicole Watterson mavi bir kedidir ve Gumball, Darwin ve Anais'in sevgi dolu annesidir.</p> 
-    <a href="https://theamazingworldofgumball.fandom.com/wiki/Nicole_Watterson" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+    <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+      <div class="card h-100">
+        <img class="card-img-top" src="../img/anais.png" alt="Anais">
+        <div class="card-body">
+          <h4 class="card-title">Anais Watterson</h4>
+          <p class="card-text">Anais Watterson, Gumball’un 4 yaşındaki pembe tavşan kız kardeşi ve ailenin en zekisidir.</p>
+          <a href="https://theamazingworldofgumball.fandom.com/wiki/Anais_Watterson" class="btn btn-success">Daha fazla bilgi için</a>
+        </div>
+      </div>
+    </div>
 
-    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
-    <img class="card-img-top" src="../img/richard.png" alt="Card image cap">
-    <div class="card-body"> 
-    <h4 class="card-title"><a>Richard Watterson </a></h4> <p class="card-text">Pembe bir tavşan olan Richard Watterson, Gumball, Darwin ve Anais'in şefkatli babasıdır.</p> 
-    <a href="https://theamazingworldofgumball.fandom.com/wiki/Richard_Watterson" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+    <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+      <div class="card h-100">
+        <img class="card-img-top" src="../img/nicole.png" alt="Nicole">
+        <div class="card-body">
+          <h4 class="card-title">Nicole Watterson</h4>
+          <p class="card-text">Nicole Watterson, mavi bir kedidir ve Gumball, Darwin ve Anais'in sevgi dolu annesidir.</p>
+          <a href="https://theamazingworldofgumball.fandom.com/wiki/Nicole_Watterson" class="btn btn-success">Daha fazla bilgi için</a>
+        </div>
+      </div>
+    </div>
 
-    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
-    <img class="card-img-top" src="../img/penny.png" alt="Card image cap">
-    <div class="card-body"> 
-    <h4 class="card-title"><a>Penny Fitzgerald </a></h4> <p class="card-text">Penny Fitzgerald, on iki yaşında bir şekil değiştiren bir peri ve Gumball'un kız arkadaşıdır.</p> 
-    <a href="https://theamazingworldofgumball.fandom.com/wiki/Penny_Fitzgerald" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+    <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+      <div class="card h-100">
+        <img class="card-img-top" src="../img/richard.png" alt="Richard">
+        <div class="card-body">
+          <h4 class="card-title">Richard Watterson</h4>
+          <p class="card-text">Richard Watterson, pembe bir tavşandır ve ailenin eğlenceli ama tembel babasıdır.</p>
+          <a href="https://theamazingworldofgumball.fandom.com/wiki/Richard_Watterson" class="btn btn-success">Daha fazla bilgi için</a>
+        </div>
+      </div>
+    </div>
 
-    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
-    <img class="card-img-top" src="../img/carrie.png" alt="Card image cap">
-    <div class="card-body"> 
-    <h4 class="card-title"><a>Carrie Krueger </a></h4> <p class="card-text">Carrie Krueger, 327 yaşında bir hayalettir ve doğaüstü dünyanın uzmanıdır.</p> 
-    <a href="https://theamazingworldofgumball.fandom.com/wiki/Carrie_Krueger" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+    <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+      <div class="card h-100">
+        <img class="card-img-top" src="../img/penny.png" alt="Penny">
+        <div class="card-body">
+          <h4 class="card-title">Penny Fitzgerald</h4>
+          <p class="card-text">Penny Fitzgerald, şekil değiştirebilen bir peri ve Gumball’un kız arkadaşıdır.</p>
+          <a href="https://theamazingworldofgumball.fandom.com/wiki/Penny_Fitzgerald" class="btn btn-success">Daha fazla bilgi için</a>
+        </div>
+      </div>
+    </div>
 
-    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
-    <img class="card-img-top" src="../img/tobias.png" alt="Card image cap">
-    <div class="card-body"> 
-    <h4 class="card-title"><a>Tobias Wilson </a></h4> <p class="card-text">Tobias Wilson, on iki yaşında gökkuşağı renginde olan bir karakterdir. Okuldakiler tarafından pek sevilmez ve gıcık olarak tanımlanır.</p> 
-    <a href="https://theamazingworldofgumball.fandom.com/wiki/Tobias_Wilson" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+    <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+      <div class="card h-100">
+        <img class="card-img-top" src="../img/carrie.png" alt="Carrie">
+        <div class="card-body">
+          <h4 class="card-title">Carrie Krueger</h4>
+          <p class="card-text">Carrie Krueger, 327 yaşında bir hayalet olup doğaüstü konularda uzmandır.</p>
+          <a href="https://theamazingworldofgumball.fandom.com/wiki/Carrie_Krueger" class="btn btn-success">Daha fazla bilgi için</a>
+        </div>
+      </div>
+    </div>
 
-    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
-    <img class="card-img-top" src="../img/joe.png" alt="Card image cap">
-    <div class="card-body"> 
-    <h4 class="card-title"><a>Banana Joe </a></h4> <p class="card-text">Banana Joe, bir muzdur ve sınıfının palyaçosudur. Banana Joe genellikle neşeli biridir.</p> 
-    <a href="https://theamazingworldofgumball.fandom.com/wiki/Banana_Joe" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+    <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+      <div class="card h-100">
+        <img class="card-img-top" src="../img/tobias.png" alt="Tobias">
+        <div class="card-body">
+          <h4 class="card-title">Tobias Wilson</h4>
+          <p class="card-text">Tobias Wilson gökkuşağı renkli bir karakterdir ve okulda pek sevilmez.</p>
+          <a href="https://theamazingworldofgumball.fandom.com/wiki/Tobias_Wilson" class="btn btn-success">Daha fazla bilgi için</a>
+        </div>
+      </div>
+    </div>
 
-    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
-    <img class="card-img-top" src="../img/alan.png" alt="Card image cap">
-    <div class="card-body"> 
-    <h4 class="card-title"><a>Alan Keane </a></h4> <p class="card-text">Alan Keane, turkuaz renkli bir balondur ve okulun en popüler öğrencilerinden biridir. Alan, hayır işlerine önem verir.</p> 
-    <a href="https://theamazingworldofgumball.fandom.com/wiki/Alan_Keane" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+    <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+      <div class="card h-100">
+        <img class="card-img-top" src="../img/joe.png" alt="Banana Joe">
+        <div class="card-body">
+          <h4 class="card-title">Banana Joe</h4>
+          <p class="card-text">Banana Joe, sınıfın palyaçosu olan bir muzdur.</p>
+          <a href="https://theamazingworldofgumball.fandom.com/wiki/Banana_Joe" class="btn btn-success">Daha fazla bilgi için</a>
+        </div>
+      </div>
+    </div>
 
-    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
-    <img class="card-img-top" src="../img/bobert.png" alt="Card image cap">
-    <div class="card-body"> 
-    <h4 class="card-title"><a>Bobert 6B </a></h4> <p class="card-text">Bobert 6B, Bobert Store'dan gelen ve nedense ortaokula giden bir robottur. Bir robot olduğu için Bobert, arkadaşları arasında en zeki olanıdır.</p> 
-    <a href="https://theamazingworldofgumball.fandom.com/wiki/Bobert_6B" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+    <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+      <div class="card h-100">
+        <img class="card-img-top" src="../img/alan.png" alt="Alan">
+        <div class="card-body">
+          <h4 class="card-title">Alan Keane</h4>
+          <p class="card-text">Alan Keane, turkuaz renkli bir balondur ve okulun en popüler öğrencilerindendir.</p>
+          <a href="https://theamazingworldofgumball.fandom.com/wiki/Alan_Keane" class="btn btn-success">Daha fazla bilgi için</a>
+        </div>
+      </div>
+    </div>
 
-    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
-    <img class="card-img-top" src="../img/tina.png" alt="Card image cap">
-    <div class="card-body"> 
-    <h4 class="card-title"><a>Tina Rex </a></h4> <p class="card-text">Tina Rex, vahşi bir tyrannosaurus rex ve okulun eski zorbasıdır. Ama şimdilerde arkadaşlarıyla çok daha iyi anlaşıyor.</p> 
-    <a href="https://theamazingworldofgumball.fandom.com/wiki/Tina_Rex" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+    <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+      <div class="card h-100">
+        <img class="card-img-top" src="../img/bobert.png" alt="Bobert">
+        <div class="card-body">
+          <h4 class="card-title">Bobert 6B</h4>
+          <p class="card-text">Bobert 6B bir robottur ve sınıfın en zeki öğrencisi olarak bilinir.</p>
+          <a href="https://theamazingworldofgumball.fandom.com/wiki/Bobert_6B" class="btn btn-success">Daha fazla bilgi için</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+      <div class="card h-100">
+        <img class="card-img-top" src="../img/tina.png" alt="Tina">
+        <div class="card-body">
+          <h4 class="card-title">Tina Rex</h4>
+          <p class="card-text">Tina Rex vahşi bir T-Rex’tir ama artık daha iyi bir arkadaştır.</p>
+          <a href="https://theamazingworldofgumball.fandom.com/wiki/Tina_Rex" class="btn btn-success">Daha fazla bilgi için</a>
+        </div>
+      </div>
+    </div>
+
   </div>
-</div>  
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
