--- a/sayfalar/js_gorseller.html
+++ b/sayfalar/js_gorseller.html
@@ -6,16 +6,15 @@
 <style>
 
   body {
-    background-color: beige;
+    background-color: f2ffe6;
     text-align: center;
     font-family: sans-serif;
   }
 
   h1 {
     margin: 25px 0;
-    color: green;
+    color: #408000;
   }
-
   
   #randomImage {
     width: 210px;
@@ -25,7 +24,6 @@
     border-radius: 10px;
     margin-bottom: 10px;
   }
-
 
   .resimdizin {
     display: flex;
@@ -54,8 +52,8 @@
     margin-bottom: 10px;
     padding: 8px 15px;
     cursor: pointer;
-    background-color: green;
-    color: beige;
+    background-color: #408000;
+    color: #f2ffe6;
   }
 
 </style>
