--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
       <ul>
         <li><a href="sayfalar/oyunlar/orijinal/CardFlip_Game-main/index.html">JavaScript Oyun / Orijinal</a></li>
         <li><a href="sayfalar/oyunlar/myver/HafizaOyunu_redesigned/index.html">JavaScript Oyun / Benim Ver.</a></li>
+        <li><a href="sayfalar/oyunlar/farklar.html">Yaptığım Değişiklikler</a></li>
       </ul>
 
     </div>
