--- a/index.html
+++ b/index.html
@@ -9,10 +9,22 @@
 
       body {
         font-family: Arial, sans-serif; 
-        background-color:#f2ffe6; 
         color:#003300;
-        margin:0;
-        padding:0;
+        background-color: #f2ffe6;
+        margin: 0px;
+
+        background-image: url('img/kb1.png'), url('img/kb2.png'), url('img/kb3.png');
+        background-repeat: repeat, repeat, repeat;
+
+        background-size:
+          240px,
+          240px,
+          240px;
+
+        background-position:
+          left 0px top 0px,        
+          left 1600px top 1600px,    
+          left 3200px top 3200px;    
       }
 
       header {
@@ -30,10 +42,15 @@
       }
 
       h2 {
+        background-color:#f2ffe6; 
+        margin: 0;
+        padding: 10px;
+        border: 2px solid #356600;
         text-align:center;
         margin-top:25px; 
         color:#1a3300;
         font-size:30px;
+        box-shadow:0 2px 6px rgba(0,0,0,0.25);
       }
 
       .icerik-kutu {
