--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
         <li><a href="sayfalar/oyunlar/farklar.html">Yaptığım Değişiklikler</a></li>
       </ul>
 
+      <h4>Hafta 12</h4>
+      <ul>
+        <li><a href="teksayilar.php">Tek Sayılar (1-100)</a></li>
+        <li><a href="tablorandomsayilar.php">Tablo Oluşturma Aracı</a></li>
+      </ul>
+
     </div>
   </body>
 </html>
