--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>BTE311-Tuana Bozdağ</title>
+    <link rel="icon" href="img/xo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
