--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@
         <li><a href="tablorandomsayilar.php">Tablo Oluşturma Aracı</a></li>
       </ul>
 
+      <h4>Hafta 13</h4>
+      <ul>
+        <li><a href="vtyskaydetme.php">Veri Tabanı Kişi Kaydetme</a></li>
+      </ul>
+
     </div>
   </body>
 </html>
