--- a/index.html
+++ b/index.html
@@ -150,9 +150,14 @@
         <li><a href="tablorandomsayilar.php">Tablo Oluşturma Aracı</a></li>
       </ul>
 
-      <h4>Hafta 13</h4>
+      <h4>Hafta 13</h4>https://github.com/lupaluti/BTE311-Final/tree/main
       <ul>
         <li><a href="vtyskaydetme.php">Veri Tabanı Kişi Kaydetme</a></li>
+      </ul>
+
+      <h4>Final</h4>
+      <ul>
+        <li><a href="https://github.com/lupaluti/BTE311-Final/tree/main">Final Proje</a></li>
       </ul>
 
     </div>
