--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <li><a href="tablorandomsayilar.php">Tablo Oluşturma Aracı</a></li>
       </ul>
 
-      <h4>Hafta 13</h4>
+      <h4>Hafta 13</h4>g
       <ul>
         <li><a href="vtyskaydetme.php">Veri Tabanı Kişi Kaydetme</a></li>
       </ul>
