--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
       <h4>Final</h4>
       <ul>
-        <li><a href="https://lupaluti.github.io/BTE311/react-finalodevi/" target="_blank">Final Proje</a></li>
+        <li><a href="https://lupaluti.github.io/react-finalodevi/" target="_blank">Final Proje</a></li>
       </ul>
 
     </div>
